# Acc-Temp

./: .env  LICENSE  README.md  main.py  pyproject.toml
app/: admin.py  auth.py  bootstrap.py  dashboard.py  home.py  main.py  user_detail.py
app/pages/: 00_login.py  01_dashboard.py  02_user_detail.py  99_admin.py
data/: .gitkeep
models/: schema.py  user.py
scripts/: create_tables.py  seed.py
services/: __init__.py  db.py  osha_rule.py  settings.py
services/dao/: __init__.py  measure_dao.py  user_dao.py  worklog_dao.py
tests/: test_measure_dao.py  test_osha_rule.py  test_user_dao.py  test_worklog_dao.py
