[tool.poetry]
name = "Acc-Temp"
version = "0.1.0"
description = "A simple Streamlit application"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.35.0"
streamlit-authenticator = "^0.4.2"

[tool.poetry.group.dev.dependencies]
# 必要ならLinterやテストツールを追加
black = "^24.0"
pytest = "^8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"